--- a/Formula1History/Formula1History/appsettings.json
+++ b/Formula1History/Formula1History/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "Description": "Our Api",
+    "UiEndpoint": "v1/swagger.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +11,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
   "ConnectionString": {
     "Formula1History": "Server=DESKTOP-I56L910;Database=Formula1History;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
