Add selilog logger

--- a/Formula1History/Formula1History/appsettings.json
+++ b/Formula1History/Formula1History/appsettings.json
@@ -4,15 +4,37 @@
     "Description": "Our Api",
     "UiEndpoint": "v1/swagger.json"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "ConnectionString": {
     "Formula1History": "Server=DESKTOP-I56L910;Database=Formula1History;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": { "path": "W:\\Repositories\\Formula1History\\Formula1History\\Logs\\log.txt" },
+        "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}{Exception:1}"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "W:\\Repositories\\Formula1History\\Formula1History\\Logs\\log.json",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "Properties": {
+      "Application": "Sample"
+    }
+  }
 }
